<resources>
    <string name="app_name">NavigationDrawerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_number_converter">Number Converter</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    calculator strings-->
    <string name="togglePosAndNeg">+/-</string>
    <string name="zeroButton">0</string>
    <string name="dotButton">.</string>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="percentButton">%</string>
    <string name="clearOperandButton">CE</string>
    <string name="clearButton">C</string>
    <string name="deleteButton">Delete</string>
    <string name="divideButton">/</string>
    <string name="multiplyButton">x</string>
    <string name="subtractButton">-</string>
    <string name="addButton">+</string>
    <string name="equalButton">=</string>
    <string name="defaultOperandValue">0</string>

</resources>